# demokratis-ml

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: schemata.py
data/embeddings-cache/: download.py
demokratis_ml/data/: embeddings.py  loading.py  schemata.py
demokratis_ml/models/: __init__.py  target_encoder.py
demokratis_ml/models/consultation_topics/: __init__.py  model.py  preprocessing.py
demokratis_ml/models/document_types/: __init__.py  features.py  model.py  preprocessing.py
demokratis_ml/pipelines/: README.md  blocks.py  create_blocks.py  embed_consultations.py  embed_documents.py  expire_exoscale_sos_objects.py  extract_document_features.py  flow_server.py  main_ingestion.py  pdf_extraction.py  predict_consultation_topics.py  predict_document_types.py  preprocess_consultation_documents.py  publish_data.py  simple_pdf_extraction.py  utils.py
demokratis_ml/pipelines/lib/: blocks.py  embeddings.py  inference.py  pdf_extraction.py  utils.py
demokratis_ml/pipelines/scripts/: create_blocks.py
mlruns/0/: meta.yaml
mlruns/127453956888069746/: meta.yaml
mlruns/127453956888069746/02329e99e2fb488d957a8039fbfcae36/: meta.yaml
mlruns/127453956888069746/02329e99e2fb488d957a8039fbfcae36/tags/: mlflow.log-model.history  mlflow.runName
mlruns/127453956888069746/8882dcb7af564e8f92601bb46411200c/: meta.yaml
mlruns/127453956888069746/8882dcb7af564e8f92601bb46411200c/tags/: mlflow.runName
mlruns/127453956888069746/b4d3d5d5553948f7bd4cb11c01bab16c/: meta.yaml
mlruns/127453956888069746/b4d3d5d5553948f7bd4cb11c01bab16c/tags/: mlflow.runName
mlruns/127453956888069746/c0343966f93e4288aff827d8924f4eb7/: meta.yaml
mlruns/127453956888069746/c0343966f93e4288aff827d8924f4eb7/tags/: mlflow.runName
research/: translation_similarity.ipynb
research/consultation-topics/: label_exploration.ipynb
research/consultation_topics/: VM_classical_topic_classifier.ipynb  VM_consultation_topic_classifier.ipynb  VM_document_topic_classifier.ipynb  data_transformations.py  label_exploration.ipynb
research/consultation_topics/archive/: VM_classical_topic_classifier.ipynb  VM_document_topic_classifier.ipynb  data_access.py  preprocessing.py
research/consultation_topics/archive/tests/: test_data_transformations.py
research/document-types/: VM_draft_classifier.ipynb  data_access.py  data_transformations.py  embeddings.py  embeddings_cache.py  plotting.py  stratified_group_split.py  utils.py
research/document_types/: VM_document_type_classifier.ipynb  VM_document_type_cleanlab.ipynb  VM_draft_classifier.ipynb  data_loading.py  document_title_rule_model.py  draft_classification.py  draft_classification.toml  ground_truth.xlsx  training_split.py
research/lib/: cleanlab_analysis.py  data_access.py  data_transformations.py  embeddings.py  embeddings_cache.py  plotting.py  stratified_group_split.py  utils.py
research/lib/tests/: test_data_transformations.py  test_embeddings_cache.py  test_stratified_group_split.py
research/mlruns/0/: meta.yaml
research/mlruns/359746332828124238/: meta.yaml
research/mlruns/359746332828124238/01ee1260abf84838a5d655f6573afb61/: meta.yaml
research/mlruns/359746332828124238/0bbafb0a09b44b2d81a80a2444d6792d/: meta.yaml
research/mlruns/359746332828124238/1c1aac1f08554f7cb515c8fe11d12485/: meta.yaml
research/mlruns/359746332828124238/3604b62f717b4d62b849011b8aa0d52a/: meta.yaml
research/mlruns/359746332828124238/38994517ea0945e18f92b44c699d6fbc/: meta.yaml
research/mlruns/359746332828124238/3dc7ff51a2d84e2caec2f8a780fb9949/: meta.yaml
research/mlruns/359746332828124238/3e9894e10c644e8a990c325a3be9d2c6/: meta.yaml
research/structure-extraction/: README.md
research/structure-extraction/intermediate_results/: 51276-de-DRAFT-92be4e18116eab4615da2a4279771eb05b4f47e2_footnotes.md  51276-de-DRAFT-92be4e18116eab4615da2a4279771eb05b4f47e2_llamaparse.md  51276-de-DRAFT-92be4e18116eab4615da2a4279771eb05b4f47e2_llamaparse.pkl  bp6wfzuy - zg - Entwurf des totalrevidierten Gesetzes ueber Ausbildungsbeitraege (ID 2565)_footnotes.md  bp6wfzuy - zg - Entwurf des totalrevidierten Gesetzes ueber Ausbildungsbeitraege (ID 2565)_llamaparse.md  bp6wfzuy - zg - Entwurf des totalrevidierten Gesetzes ueber Ausbildungsbeitraege (ID 2565)_llamaparse.pkl  jpxdh228 - zh - Entwurf-1_(EnerG-Aenderung-Staerkung-Versorgungssicherheit_Vernehmlassung)_footnotes.md  jpxdh228 - zh - Entwurf-1_(EnerG-Aenderung-Staerkung-Versorgungssicherheit_Vernehmlassung)_llamaparse.md  jpxdh228 - zh - Entwurf-1_(EnerG-Aenderung-Staerkung-Versorgungssicherheit_Vernehmlassung)_llamaparse.pkl
research/structure-extraction/models/: chatgpt_file_upload_model.py  llama_parse_markdown_model.py
research/structure-extraction/sample-documents/: get_sample_documents.py  sample_document_metadata.csv
research/structure-extraction/sample-outputs/: 51276-de-DRAFT-92be4e18116eab4615da2a4279771eb05b4f47e2_json_schema.json  51276-de-DRAFT-92be4e18116eab4615da2a4279771eb05b4f47e2_pypdf2_diff.html  bp6wfzuy - zg - Entwurf des totalrevidierten Gesetzes ueber Ausbildungsbeitraege (ID 2565)_json_schema.json  bp6wfzuy - zg - Entwurf des totalrevidierten Gesetzes ueber Ausbildungsbeitraege (ID 2565)_pypdf2_diff.html  jpxdh228 - zh - Entwurf-1_(EnerG-Aenderung-Staerkung-Versorgungssicherheit_Vernehmlassung)_json_schema.json  jpxdh228 - zh - Entwurf-1_(EnerG-Aenderung-Staerkung-Versorgungssicherheit_Vernehmlassung)_pypdf2_diff.html
research/structure-extraction/scripts/: chatgpt_file_upload.ipynb  play_with_markdown_to_json.ipynb  run_model_evaluation.ipynb
research/structure-extraction/scripts/archive/: markdown_parser.py  (+2 more)
research/structure-extraction/test/: test_parse_markdown_to_json.py  test_processing.py
research/structure_extraction/: docling_test.ipynb
scripts/: build_docker_image.sh  demokratis_api_client.py
src/evaluation/: evaluate.py  json_schema.json
src/preprocessing/: preprocess.py
src/processing/: process.py
test/: test_markdown_parser.py
(+887 files in other folders)
